# playlist_generator

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: windows-exe.yml
docs/: maintainer-guide.md  testing.md
playlist_generator/: __init__.py  audio_normalization.py  cli.py  core.py  ffmpeg_setup.py  gui.py  windows_build.py
requirements/: windows-ci-lock.txt
scripts/: windows_cli_launcher.py  windows_gui_launcher.py
tests/: test_audio_normalization.py  test_cli.py  test_ffmpeg_setup.py  test_gui.py  test_playlist_generator.py  test_windows_build.py
