[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "playlist-generator"
version = "0.3.0"
description = "Cross-platform VLC playlist generator."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Matthew" }]

[project.optional-dependencies]
dev = [
    "pip-audit==2.10.0",
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.11.0",
]
windows-build = [
    "pyinstaller>=6.19.0",
]

[project.scripts]
vlc-playlist-generator = "playlist_generator.cli:main"
vlc-playlist-generator-gui = "playlist_generator.gui:main"
vlc-playlist-generator-build-windows = "playlist_generator.windows_build:main"

[tool.setuptools]
packages = ["playlist_generator"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --cov=playlist_generator --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]
